--- a/assets/css/job-details.css
+++ b/assets/css/job-details.css
@@ -527,4 +527,8 @@ button[type="button"] img {
     .note {
         display: block;
     }
+
+    .container {
+        display: none;
+    }
 }
